# AutoDocumentation_Extension

./: .env.example  .gitignore  .sesskey  ARTIFACTS_IMPLEMENTATION_SUMMARY.md  ARTIFACTS_MIGRATION_PLAN.md  Dockerfile  Makefile  README.md  SECURITY_REVIEW.md  TODO.md  TODOS.md  USE_CASES.md  app.sh  cli.sh  extension_manifest.json  extension_versions.json  setup-deps.sh
agent_automation/: README.md  bundle_evidence_task_brief.md  deploy.md  e2e_test_runbook.md  setup.md  task_brief.md  test_code_source_browser.md
agent_automation/scripts/: launch_chrome.sh  redeploy_app.py
auto_model_docs/: DESIGN.md  README.md  app_studio.sh  artifact_layout.py  auth_context.py  authorization.py  authorized_actions.py  dataset_ctx.py  dataset_manager.py  dataset_store.py  default_consts.py  doc_spec.yaml  domino_auth.py  domino_client.py  domino_datasets.py  domino_job_store.py  env_diag.py  governance_client.py  local_data_manager.py  main.py  mlflow.db  pyproject.toml  run_cli_local.sh  spec_store.py  spec_template_sync.py  temporary_versioning.py  web_app_studio.py
auto_model_docs/autodoc/: __init__.py  governance_read.py  orchestrator.py
auto_model_docs/autodoc-env/: pyvenv.cfg
auto_model_docs/autodoc/core/: __init__.py  config.py  exceptions.py  models.py
auto_model_docs/autodoc/generation/: __init__.py  builder.py  citations.py  generator.py  notebook_builder.py  notebook_exporter.py  planner.py
auto_model_docs/autodoc/llm/: __init__.py  client.py  prompt_loader.py  prompts.py
auto_model_docs/autodoc/llm_prompts/: prompts.yaml
auto_model_docs/autodoc/scanning/: __init__.py  artifact_scanner.py  bundle_scanner.py  code_scanner.py  file_card.py  sanitizer.py
auto_model_docs/spec-templates/: doc_spec.yaml  doc_spec_executive.yaml  doc_spec_fairness.yaml  doc_spec_llm_eval.yaml  doc_spec_regulated.yaml
auto_model_docs/studio/: __init__.py  font_assets.py  job_engine.py  routes_api.py  routes_job.py  routes_spec.py  scripts.py  state.py  styles.py  ui_components.py
auto_model_docs/tests/: conftest.py  test_artifact_scanner.py  test_artifact_scanner_debug.py  test_auth_context.py  test_bundle_scanner.py  test_citations.py  test_config.py  test_domino_client_governance.py  test_domino_client_http.py  test_end_to_end.py  test_env_diag.py  test_exceptions.py  test_file_card.py  test_governance_citation_display.py  test_governance_fixtures.py  test_governance_format.py  test_governance_model_filter.py  test_governance_prompts.py  test_governance_read.py  test_job_engine_prompts.py  test_job_queue.py  test_line_resolution.py  test_llm_client.py  test_main_governance.py  test_models.py  test_orchestrator.py  test_planner.py  test_prompt_loader.py  test_prompt_templates.py  test_prompts_ranking.py  test_sanitizer.py  test_scanner_pipeline.py  test_ui_components.py
auto_model_docs/tests/fixtures/governance/: bundle-computed-policy.json  bundles-list-modeldocs-target-bgp.json  bundles-list.json  compute-policy-mlflow3-bundle.json  findings-open.json  findings-todo.json
diagrams/explanations/: Auto Model Documentation Guide.md  AutoML Extension Documentation.md  auto-documentation-workflow.mmd
docs/governance-context/: governance-context-handover.md
mlflow_data/: mlflow.db
sample_projects/: README.md
sample_projects/02_price_prediction/: model.py  (+8 more)
tests/: conftest.py  test_artifact_layout.py  test_auth_context.py  test_authorization.py  test_citations_multilang.py  test_cli_main.py  test_code_scanner_multilang.py  test_dataset_manager.py  test_default_consts.py  test_domino_auth.py  test_domino_client.py  test_domino_client_v2.py  test_domino_datasets.py  test_domino_job_store.py  test_extension_manifest.py  test_font_assets.py  test_governance_client.py  test_integration.py  test_job_engine.py  test_language_profile.py  test_prompts_multilang.py  test_routes.py  test_sanitizer_multilang.py  test_spec_store.py  test_spec_template_sync.py  test_spec_validation.py  test_studio_state.py  test_ui_components.py  test_ui_refinement.py  test_web_app_studio.py
user_docs/: how-to.md
(+24 files in other folders)
