[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-model-docs"
version = "0.1.0"
description = "Automatically generate Word documents from ML codebases using LLM-powered analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Data Science Team"}
]
keywords = ["ml", "documentation", "llm", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "mlflow>=2.6.0",
    "python-docx>=1.0.0",
    "matplotlib>=3.7.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
    "httpx>=0.25.0",
    "python-fasthtml>=0.10.0",
    "nbformat>=5.9.0",  # For Jupyter notebook generation
    "nbclient>=0.8.0",  # For executing notebook cells
    "ipykernel>=6.0.0",  # Jupyter kernel for notebook execution
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
autodoc = "auto_model_docs.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/output/*",
    # autodoc/ core has its own test suite in auto_model_docs/tests/ (requires Python 3.10+)
    "*/autodoc/*",
    # CLI and legacy entry points — need integration tests
    "*/main.py",
    "*/web_app.py",
    "*/web_app_studio.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
