[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-model-docs"
version = "0.1.0"
description = "Automatically generate Word documents from ML codebases using LLM-powered analysis"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Data Science Team"}
]
keywords = ["ml", "documentation", "llm", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "anthropic==0.84.0",
    "openai==2.26.0",
    "mlflow==3.2.0",
    "python-docx==1.2.0",
    "mammoth>=1.6.0",
    "matplotlib==3.8.4",
    "pydantic==2.10.6",
    "pydantic-settings==2.13.1",
    "pyyaml==6.0.1",
    "click==8.3.1",
    "rich==14.3.3",
    "aiohttp==3.13.3",
    "aiofiles==25.1.0",
    "httpx==0.28.1",
    "python-fasthtml==0.12.48",
    "starlette==0.41.3",
    "dominodatalab==2.0.0",
    "nbformat==5.10.4",
    "nbclient==0.10.4",
    "ipykernel==6.19.4",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
]

[project.scripts]
autodoc = "auto_model_docs.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
studio = ["static/fontawesome/*.otf"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/output/*",
    # autodoc/ core has its own test suite in auto_model_docs/tests/ (requires Python 3.10+)
    "*/autodoc/*",
    # CLI and legacy entry points — need integration tests
    "*/main.py",
    "*/web_app.py",
    "*/web_app_studio.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
